assets/css/sangupta.css
html {
  height: 100%;
}
body {
  padding-top: 50px;
  height: 100%;
  font-family: Merriweather, Georgia, 'Times New Roman', serif;
}
h1, h2, h3 {
  margin-bottom: 30px;
}
h4 {
  font-size: 20px;
  font-weight: 400;
}
h5 {
  font-size: 18px;
  font-weight: 400;
}
h6 {
  font-size: 16px;
  font-weight: 400;
}
code {
  color: #777;  
}
.pad-top-20 {
  padding-top: 20px;
}
.pad-left-20 {
  padding-left: 20px;
}
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #f5f5f5;
    border-right: 1px solid #ddd;
  }
}
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca;
}
main {
  padding: 20px;
  padding-top: 0;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}
.main {
  background-color: white;
  min-height: 500px;
}
.main p {
  margin-bottom: 25px;
}
.monoDate {
  font-family: Monaco, "Courier New", monospace;
  font-size: 14px;
}
.main {
  font-size: 18px;
  font-weight: 300;
  line-height: 32px;
}
.main pre {
  line-height: 22px;
  margin-bottom: 30px;
}
.main h1 {
  line-height: 54px;
}
.main h2 {
  font-size: 36px;
  text-align: center;
  font-weight: 400;
}
.post-content p, .page-content p {
  /*padding-top: 30px;*/
}
li p {
  padding-top: 0 !important;
}
body {
  background-image: url("/assets/images/bg.png");
  background-repeat: repeat;
}
.relative {
  position: relative;
}
.full-height {
  height: 100%;
}
.bottom {
  position: absolute;
  bottom: 0;
}
.footer {
  font-size: 10px;
  padding-top: 20px;
  background-color: #f5f5f5;
  color: #777;
  line-height: 20px;
}
.footer p {
  margin-top: 20px;
  margin-bottom: 10px;
}
.social-links {
  font-size: 20px;
}
.sidebar-main-link {
  display: block;
  padding-top: 10px;
  text-align: center;
  margin-top: 10px;
}
.readMore {
  font-style: italic;
}
.side-kick {
  display: block;
  font-size: 12px;
}
a.fa-lg {
  cursor: pointer;
}
.profile-image {
  padding:0;
  margin:0 auto;
  width: 120px;
}
.post {
  padding-top: 25px;
}
.full-height {
  height: 100%;
  min-height: 100%;
}
.archive .row {
  padding-top: 10px;
}
table {
  border: 1px solid #ddd;
  max-width: 100%;
  margin-bottom: 20px;
  background-color: transparent;
  border-spacing: 0;
  border-collapse: collapse;
  display: table;
}
table>tbody>tr:nth-child(odd) {
  background-color: #f9f9f9;
}
table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
  padding: 8px;
  line-height: 1.42857143;
  vertical-align: top;
  border-top: 1px solid #ddd;
}
table>caption+thead>tr:first-child>th, table>colgroup+thead>tr:first-child>th, table>thead:first-child>tr:first-child>th, table>caption+thead>tr:first-child>td, .table>colgroup+thead>tr:first-child>td, .table>thead:first-child>tr:first-child>td {
  border-top: 0;
}
table>thead>tr>th, table>thead>tr>td {
  border-bottom-width: 2px;
}
table>thead>tr>th, table>tbody>tr>th, table>tfoot>tr>th, table>thead>tr>td, table>tbody>tr>td, table>tfoot>tr>td {
  border: 1px solid #ddd;
}
code.language-text {
  color: #333;
}
.poetry pre, .poetry pre code {
  background-color: transparent !important;
  color: #333;
  border: none !important;
  padding: 0;
  margin: 0;
  font-family: Merriweather, Georgia, 'Times New Roman', serif;
  font-size: 16px;
  line-height: 28px;
  margin-top: 30px;
}
.statcounter {
  display: none;
}
.flexbox {
  display: flex;
}
.fb-share-button {
  padding-left: 20px;
}
a {
  font-weight: 400;
}
.post-title {
  margin-bottom: 30px;
  text-align: center;
}
.archive {
  font-size: 16px;
}
.archive a {
  font-weight: 300 !important;
}
.highlight {
  padding: 0 40px;
}
.post-description p {
  margin-bottom: 30px;
}
article.one-poem:after, section.post:after {
  background-image: url(/assets/images/divider.png);
  background-position: center top;
  background-repeat: no-repeat;
  clear: both;
  content: "";
  display: block;
  margin: 59.4px 0;
  width: 100%;
  height: 40px;
}
.poem-content {
  text-align: center;
}

